--- a/app/etc/app.properties
+++ b/app/etc/app.properties
@@ -3,5 +3,6 @@
 "host" : "127.0.0.1",
 "port" : 3000,
 "elasticPort" : 9200,
-"elasticHost" : "172.17.42.1"
+"elasticHost" : "172.17.42.1",
+"name" : "James the MyStErIoUs"
 }
